--- a/Assembly-CSharp-Editor.csproj
+++ b/Assembly-CSharp-Editor.csproj
@@ -41,17 +41,9 @@
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
   <ItemGroup>
-     <Compile Include="Assets\AAMT\Editor\EditorCommon.cs" />
-     <Compile Include="Assets\AAMT\Editor\Windows\SettingManagerWindow.cs" />
-     <Compile Include="Assets\AAMT\Editor\AssetBundlePackageData.cs" />
-     <Compile Include="Assets\AAMT\Editor\RemoveMissingScripts.cs" />
-     <Compile Include="Assets\AAMT\Editor\Windows\AssetBundleSettingWindow.cs" />
-     <Compile Include="Assets\AAMT\Editor\OnPreprocessHandler.cs" />
-     <Compile Include="Assets\AAMT\Editor\Windows\AamtMainWindos.cs" />
-     <Compile Include="Assets\AAMT\Editor\AutoSetAssetsBundelName.cs" />
-     <Compile Include="Assets\AAMT\Editor\WindowDefine.cs" />
-     <Compile Include="Assets\AAMT\Editor\AssetsBundleBuilder.cs" />
-     <Compile Include="Assets\AAMT\Editor\AssetBundleSetting.cs" />
+     <Compile Include="Assets\Editor\TestList\TestList.cs" />
+     <None Include="Assets\Editor\TestList\TestList.uss" />
+     <None Include="Assets\Editor\TestList\TestList.uxml" />
      <Reference Include="UnityEngine">
      <HintPath>D:\Program Files\Unity 2021.3.1f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
      </Reference>
@@ -307,9 +299,6 @@
      <Reference Include="UnityEditor.WindowsStandalone.Extensions">
      <HintPath>D:\Program Files\Unity 2021.3.1f1\Editor\Data\PlaybackEngines\WindowsStandaloneSupport\UnityEditor.WindowsStandalone.Extensions.dll</HintPath>
      </Reference>
-     <Reference Include="Sirenix.OdinInspector.Attributes">
-     <HintPath>E:\AAMT-Sample\Assets\AAMT\Plugins\Sirenix\Assemblies\Sirenix.OdinInspector.Attributes.dll</HintPath>
-     </Reference>
      <Reference Include="Unity.VisualScripting.IonicZip">
      <HintPath>E:\AAMT-Sample\Library\PackageCache\com.unity.visualscripting@1.7.6\Editor\VisualScripting.Core\Dependencies\DotNetZip\Unity.VisualScripting.IonicZip.dll</HintPath>
      </Reference>
@@ -317,13 +306,13 @@
      <HintPath>E:\AAMT-Sample\Library\PackageCache\com.unity.collab-proxy@1.15.15\Lib\Editor\PlasticSCM\log4netPlastic.dll</HintPath>
      </Reference>
      <Reference Include="Sirenix.Serialization.Config">
-     <HintPath>E:\AAMT-Sample\Assets\AAMT\Plugins\Sirenix\Assemblies\Sirenix.Serialization.Config.dll</HintPath>
+     <HintPath>E:\AAMT-Sample\Packages\com.jimhy.aamt\Plugins\Sirenix\Assemblies\Sirenix.Serialization.Config.dll</HintPath>
      </Reference>
      <Reference Include="ReportGeneratorMerged">
      <HintPath>E:\AAMT-Sample\Library\PackageCache\com.unity.testtools.codecoverage@1.0.1\lib\ReportGenerator\ReportGeneratorMerged.dll</HintPath>
      </Reference>
      <Reference Include="Sirenix.Utilities.Editor">
-     <HintPath>E:\AAMT-Sample\Assets\AAMT\Plugins\Sirenix\Assemblies\Sirenix.Utilities.Editor.dll</HintPath>
+     <HintPath>E:\AAMT-Sample\Packages\com.jimhy.aamt\Plugins\Sirenix\Assemblies\Sirenix.Utilities.Editor.dll</HintPath>
      </Reference>
      <Reference Include="Unity.Plastic.Newtonsoft.Json">
      <HintPath>E:\AAMT-Sample\Library\PackageCache\com.unity.collab-proxy@1.15.15\Lib\Editor\PlasticSCM\Unity.Plastic.Newtonsoft.Json.dll</HintPath>
@@ -334,29 +323,32 @@
      <Reference Include="Unity.Analytics.Editor">
      <HintPath>E:\AAMT-Sample\Library\PackageCache\com.unity.analytics@3.6.12\Unity.Analytics.Editor.dll</HintPath>
      </Reference>
-     <Reference Include="Unity.Plastic.Antlr3.Runtime">
-     <HintPath>E:\AAMT-Sample\Library\PackageCache\com.unity.collab-proxy@1.15.15\Lib\Editor\PlasticSCM\Unity.Plastic.Antlr3.Runtime.dll</HintPath>
-     </Reference>
      <Reference Include="Unity.VisualScripting.YamlDotNet">
      <HintPath>E:\AAMT-Sample\Library\PackageCache\com.unity.visualscripting@1.7.6\Editor\VisualScripting.Core\Dependencies\YamlDotNet\Unity.VisualScripting.YamlDotNet.dll</HintPath>
      </Reference>
      <Reference Include="Sirenix.OdinInspector.Editor">
-     <HintPath>E:\AAMT-Sample\Assets\AAMT\Plugins\Sirenix\Assemblies\Sirenix.OdinInspector.Editor.dll</HintPath>
+     <HintPath>E:\AAMT-Sample\Packages\com.jimhy.aamt\Plugins\Sirenix\Assemblies\Sirenix.OdinInspector.Editor.dll</HintPath>
+     </Reference>
+     <Reference Include="Sirenix.Serialization">
+     <HintPath>E:\AAMT-Sample\Packages\com.jimhy.aamt\Plugins\Sirenix\Assemblies\Sirenix.Serialization.dll</HintPath>
+     </Reference>
+     <Reference Include="Sirenix.OdinInspector.Attributes">
+     <HintPath>E:\AAMT-Sample\Packages\com.jimhy.aamt\Plugins\Sirenix\Assemblies\Sirenix.OdinInspector.Attributes.dll</HintPath>
      </Reference>
      <Reference Include="unityplastic">
      <HintPath>E:\AAMT-Sample\Library\PackageCache\com.unity.collab-proxy@1.15.15\Lib\Editor\PlasticSCM\unityplastic.dll</HintPath>
      </Reference>
-     <Reference Include="Unity.Analytics.Tracker">
-     <HintPath>E:\AAMT-Sample\Library\PackageCache\com.unity.analytics@3.6.12\Unity.Analytics.Tracker.dll</HintPath>
+     <Reference Include="Unity.Plastic.Antlr3.Runtime">
+     <HintPath>E:\AAMT-Sample\Library\PackageCache\com.unity.collab-proxy@1.15.15\Lib\Editor\PlasticSCM\Unity.Plastic.Antlr3.Runtime.dll</HintPath>
      </Reference>
      <Reference Include="Sirenix.Utilities">
-     <HintPath>E:\AAMT-Sample\Assets\AAMT\Plugins\Sirenix\Assemblies\Sirenix.Utilities.dll</HintPath>
+     <HintPath>E:\AAMT-Sample\Packages\com.jimhy.aamt\Plugins\Sirenix\Assemblies\Sirenix.Utilities.dll</HintPath>
      </Reference>
      <Reference Include="Unity.VisualScripting.Antlr3.Runtime">
      <HintPath>E:\AAMT-Sample\Library\PackageCache\com.unity.visualscripting@1.7.6\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
      </Reference>
-     <Reference Include="Sirenix.Serialization">
-     <HintPath>E:\AAMT-Sample\Assets\AAMT\Plugins\Sirenix\Assemblies\Sirenix.Serialization.dll</HintPath>
+     <Reference Include="Unity.Analytics.Tracker">
+     <HintPath>E:\AAMT-Sample\Library\PackageCache\com.unity.analytics@3.6.12\Unity.Analytics.Tracker.dll</HintPath>
      </Reference>
      <Reference Include="nunit.framework">
      <HintPath>E:\AAMT-Sample\Library\PackageCache\com.unity.ext.nunit@1.0.6\net35\unity-custom\nunit.framework.dll</HintPath>
@@ -1003,6 +995,9 @@
      <Reference Include="Unity.Timeline">
      <HintPath>E:\AAMT-Sample\Library\ScriptAssemblies\Unity.Timeline.dll</HintPath>
      </Reference>
+     <Reference Include="Unity.VisualScripting.Core.Editor">
+     <HintPath>E:\AAMT-Sample\Library\ScriptAssemblies\Unity.VisualScripting.Core.Editor.dll</HintPath>
+     </Reference>
      <Reference Include="Unity.TextMeshPro">
      <HintPath>E:\AAMT-Sample\Library\ScriptAssemblies\Unity.TextMeshPro.dll</HintPath>
      </Reference>
@@ -1012,12 +1007,6 @@
      <Reference Include="Unity.VisualScripting.State.Editor">
      <HintPath>E:\AAMT-Sample\Library\ScriptAssemblies\Unity.VisualScripting.State.Editor.dll</HintPath>
      </Reference>
-     <Reference Include="Unity.VisualScripting.Core.Editor">
-     <HintPath>E:\AAMT-Sample\Library\ScriptAssemblies\Unity.VisualScripting.Core.Editor.dll</HintPath>
-     </Reference>
-     <Reference Include="UnityEngine.Advertisements">
-     <HintPath>E:\AAMT-Sample\Library\ScriptAssemblies\UnityEngine.Advertisements.dll</HintPath>
-     </Reference>
      <Reference Include="Unity.VisualScripting.SettingsProvider.Editor">
      <HintPath>E:\AAMT-Sample\Library\ScriptAssemblies\Unity.VisualScripting.SettingsProvider.Editor.dll</HintPath>
      </Reference>
@@ -1026,6 +1015,9 @@
      </Reference>
      <Reference Include="Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection">
      <HintPath>E:\AAMT-Sample\Library\ScriptAssemblies\Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection.dll</HintPath>
+     </Reference>
+     <Reference Include="UnityEngine.Advertisements">
+     <HintPath>E:\AAMT-Sample\Library\ScriptAssemblies\UnityEngine.Advertisements.dll</HintPath>
      </Reference>
      <Reference Include="Unity.VisualScripting.Flow">
      <HintPath>E:\AAMT-Sample\Library\ScriptAssemblies\Unity.VisualScripting.Flow.dll</HintPath>
@@ -1110,9 +1102,17 @@
       <Project>{efc4b178-c8fb-c989-3a47-4bc08009f09a}</Project>
       <Name>Sirenix.OdinInspector.CompatibilityLayer.Editor</Name>
     </ProjectReference>
+    <ProjectReference Include="com.jimhy.aamt.runtime.csproj">
+      <Project>{c16b0091-88cc-a47e-2f5c-d67cf5c13f9b}</Project>
+      <Name>com.jimhy.aamt.runtime</Name>
+    </ProjectReference>
     <ProjectReference Include="Sirenix.OdinValidator.csproj">
       <Project>{abaa2410-9264-3f57-5ffa-4eb5c367fc51}</Project>
       <Name>Sirenix.OdinValidator</Name>
+    </ProjectReference>
+    <ProjectReference Include="aamt.editor.csproj">
+      <Project>{1ef46eaa-aa43-2914-e7a6-43873d5e796c}</Project>
+      <Name>aamt.editor</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
